--- a/XYZReader/src/main/res/values/strings.xml
+++ b/XYZReader/src/main/res/values/strings.xml
@@ -4,9 +4,11 @@
     <string name="welcome_xyz_reader">Welcome to XYZ Reader!</string>
 
     <string name="action_refresh">Refresh</string>
-    <string name="action_settings">Settings</string>
     <string name="action_share">Share</string>
+    <string name="action_retry">Retry</string>
 
     <string name="up">Up</string>
+
+    <string name="no_connection">No internet connection.</string>
 
 </resources>
